--- a/DigitalProductionProgram.csproj
+++ b/DigitalProductionProgram.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <None Remove="DataBaseSettings.json" />
+    <None Remove="Resources\CodeWheel.png" />
+    <None Remove="Resources\Code_Background.jpg" />
     <None Remove="Resources\Grades\1.png" />
     <None Remove="Resources\Grades\10.png" />
     <None Remove="Resources\Grades\11.png" />
@@ -92,6 +94,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\CodeWheel.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Code_Background.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\Grades\1.png" />
     <EmbeddedResource Include="Resources\Grades\10.png" />
     <EmbeddedResource Include="Resources\Grades\11.png" />
