--- a/DigitalProductionProgram.csproj
+++ b/DigitalProductionProgram.csproj
@@ -8,8 +8,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<ApplicationIcon>NewIcon.ico</ApplicationIcon>
-		<AssemblyVersion>4.3.10.8</AssemblyVersion>
-		<FileVersion>4.3.10.8</FileVersion>
+		<AssemblyVersion>4.3.11.0</AssemblyVersion>
+		<FileVersion>4.3.11.0</FileVersion>
 
 		<!-- ✅ Matchar arkitektur: -->
 		<PlatformTarget>x86</PlatformTarget>
@@ -196,6 +196,9 @@
 
   <ItemGroup>
 	  <PackageReference Include="EPPlus" Version="8.0.1" />
+	  <PackageReference Include="LiveChartsCore" Version="2.0.0-rc10" />
+	  <PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-rc10" />
+	  <PackageReference Include="LiveChartsCore.SkiaSharpView.WinForms" Version="2.0.0-rc10" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
