--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ node_modules/
 /DPP_Installer/BundleArtifacts/Install DPP.appinstaller.xml
 /.gitignore
 /DPP_Installer/BundleArtifacts/x86.txt
+/DPP_Installer/Install DPP.assets.cache
