--- a/DataBaseSettings.json
+++ b/DataBaseSettings.json
@@ -1,12 +1,12 @@
 {
   /// <summary>
   /// cs_Protocol_OGO              = Data Source=GOD-S1-SQL01;Initial Catalog=Korprotokoll;Persist Security Info=True;User ID=korprotokoll;Password=GOD-Stout4-Gladiator-Gazing-Retail-Pegboard;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;
-  /// cs_Protocol_OTH              = Data Source=THAI-SRV1-SQL01\SQLEXPRESS;Initial Catalog=Korprotokoll_Thai;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;
+  /// cs_Protocol_OTH              = Data Source=DPP_OTH;Initial Catalog=Korprotokoll_Thai;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;
   /// cs_Protocol_Beta             = Data Source=GOD-S1-SQL01;Initial Catalog=Korprotokoll;Persist Security Info=True;User ID=korprotokoll;Password=GOD-Stout4-Gladiator-Gazing-Retail-Pegboard;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;
   /// cs_Protocol_OVF              = Data Source=OVF-S1-SQL;Initial Catalog=DPP_OVF;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;
 
   /// csToolRegister_OGO           = Data Source=OPTISQL2017;Initial Catalog=Korprotokoll;Persist Security Info=True;User ID=korprotokoll;Password=GOD-Stout4-Gladiator-Gazing-Retail-Pegboard;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;
-  /// csToolRegister_OTH           = Data Source=THAI-SRV1-SQL01\SQLEXPRESS;Initial Catalog=Toolregister_Thai;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;
+  /// csToolRegister_OTH           = Data Source=DPP_OTH;Initial Catalog=Toolregister_Thai;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;
   /// cs_ToolRegister_OVF          = Data Source=OVF-S1-SQL;Initial Catalog=Toolregister_OVF;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;
   /// </summary>
 
@@ -21,19 +21,19 @@
   //  "MonitorHost": "optig5"
 
   //-------OVF-------
-  "ConnectionStrings": {
-    "csProtocol": "Data Source=OVF-S1-SQL;Initial Catalog=DPP_OVF;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;",
-    "csToolregister": "Data Source=OVF-S1-SQL;Initial Catalog=Toolregister_OVF;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;",
-    "MonitorHost": "optig5",
-    "MonitorCompany": "012.1"
-
-  //-------OTH-------
   //"ConnectionStrings": {
-  //  "csProtocol": "Data Source=THAI-SRV1-SQL01\\SQLEXPRESS;Initial Catalog=Korprotokoll_Thai;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;",
-  //  "csToolregister": "Data Source=THAI-SRV1-SQL01\\SQLEXPRESS;Initial Catalog=Toolregister_Thai;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;",
+  //  "csProtocol": "Data Source=OVF-S1-SQL;Initial Catalog=DPP_OVF;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;",
+  //  "csToolregister": "Data Source=OVF-S1-SQL;Initial Catalog=Toolregister_OVF;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=5;Encrypt=True;TrustServerCertificate=True;",
   //  "MonitorHost": "optig5",
-  //  "MonitorCompany": "010.1"
-},
+  //  "MonitorCompany": "012.1"
+
+    //-------OTH-------
+  "ConnectionStrings": {
+    "csProtocol": "Data Source=OTH-S1-SQL01;Initial Catalog=DPP_OTH;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;",
+    "csToolregister": "Data Source=OTH-S1-SQL01;Initial Catalog=Toolregister_OTH;Persist Security Info=True;User ID=korprotokoll;Password=korprotokoll;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;",
+    "MonitorHost": "optig5",
+    "MonitorCompany": "010.1"
+  },
 
   "ApiCredentials": {
     "Username": "OPTIAPI",
